# waltham-receiver

./: README.md
waltham-receiver/: CMakeLists.txt  COPYING  README.md  meson.build  meson_options.txt
waltham-receiver/conf.d/cmake/: config.cmake
waltham-receiver/config/: receiver_pipeline_example_general.cfg  receiver_pipeline_example_intel.cfg  receiver_pipeline_example_rcar.cfg
waltham-receiver/include/: wth-receiver-buffer.h  wth-receiver-comm.h  wth-receiver-seat.h  wth-receiver-surface.h
waltham-receiver/src/: CMakeLists.txt  os-compatibility.c  wth-receiver-buffer.c  wth-receiver-comm.c  wth-receiver-gst-egl.c  wth-receiver-gst-shm.c  wth-receiver-main.c  wth-receiver-seat.c  wth-receiver-surface.c
